test/Fail/Issue1194i.err
Issue1194i.agda:26.9-16: error: [AmbiguousParseForApplication]
Don't know how to parse + + + b. Could mean any one of:
  c (c (c b))
  c (c (c b))
  c (c (c b))
  c (c (c b))
Operators used in the grammar:
  + (prefix notation, level 0) [c (Issue1194i.agda:11.5-6)]
  + (prefix notation, level 1) [c (Issue1194i.agda:20.5-6)]
when scope checking + + + b
